attempting to fix center alignment on social links

--- a/styles.css
+++ b/styles.css
@@ -129,8 +129,6 @@ ul {
   outline: 1px solid rgb(40, 27, 216);
   display: flex;
   justify-content: space-around;
-  align-items: center;
-  max-width: 400px;
 }
 
 .social-links a {
@@ -362,10 +360,5 @@ ul {
   .navbar .container {
     padding-left: 20px;
     padding-right: 20px;
-  }
-}
-@media only screen and (max-width: 600px) {
-  .social-links {
-    max-width: 400px;
   }
 }
